# cmark-syntax

./: Cargo.toml  README.md  sh.html
src/: languages.rs  lib.rs
src/languages/: c.rs  javascript.rs  rust.rs  sh.rs  toml.rs
tests/: math.html  math.rs  rust.html  rust.rs  rust2.rs  script.sh  selfprint  selfprint.html  sh.html  sh.rs  test.toml  toml.html  toml.rs
