[package]
name = "cmark-syntax"
version = "0.1.1"
edition = "2021"
authors = ["Maciej Hirsz <maciej.hirsz@pm.me>", "Maroš Grego <maros@grego.site>"]
description = "Syntax highlighting for pulldown-cmark"
repository = "https://github.com/grego/cmark-syntax"
homepage = "https://github.com/grego/cmark-syntax"
keywords = ["cmark", "syntax", "highlighting"]
categories = ["parsing", "web-programming"]
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
pulldown-cmark = "0.8"
logos = "0.12"
latex2mathml = { version = "0.2.3", optional = true }

[dev-dependencies]
ramhorns = "0.13"
