[package]
name = "cmark-syntax"
version = "0.4.1"
edition = "2021"
authors = ["Maciej Hirsz <maciej.hirsz@pm.me>", "Maroš Grego <maros@grego.site>"]
description = "Syntax highlighting for pulldown-cmark"
repository = "https://github.com/grego/cmark-syntax"
homepage = "https://github.com/grego/cmark-syntax"
keywords = ["cmark", "syntax", "highlighting"]
categories = ["parsing", "web-programming"]
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
pulldown-cmark = { version = "0.9", default_features = false }
logos = "0.12"
latex2mathml = { version = "0.2.3", optional = true }

[dev-dependencies]
ramhorns = { git = "https://github.com/grego/ramhorns", branch = "shorthand" }
