[package]
name = "cmark-syntax"
version = "0.6.0"
edition = "2021"
authors = ["Maroš Grego <maros@grego.site>", "Maciej Hirsz <maciej.hirsz@pm.me>"]
description = "Syntax highlighting for pulldown-cmark"
repository = "https://github.com/grego/cmark-syntax"
homepage = "https://github.com/grego/cmark-syntax"
keywords = ["cmark", "syntax", "highlighting"]
categories = ["parsing", "web-programming"]
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false }
logos = "0.15"
latex2mathml = { version = "0.2.3", optional = true }

[dev-dependencies]
ramhorns = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[features]
default = ["latex2mathml"]
